# AdventOfCode

./: .gitignore  AdventOfCode.sln  LICENSE  README.md
year2015/: README.md
year2015/rust/: Cargo.toml  Makefile
year2015/rust/day12/: Cargo.toml
year2015/rust/day13/: Cargo.toml
year2015/rust/day16/: Cargo.toml
year2015/rust/day17/: Cargo.toml
year2015/rust/day18/: Cargo.toml
year2015/rust/day19/: Cargo.toml
year2015/rust/day20/: Cargo.toml
year2015/rust/day21/: Cargo.toml
year2015/rust/day22/: Cargo.toml
year2015/rust/day24/: Cargo.toml
year2015/rust/day4/: Cargo.toml
year2015/rust/day7/: Cargo.toml
year2015/rust/day8/: Cargo.toml
year2016/cpp/: .gitignore  CMakeLists.txt
year2016/cpp/common/: common.cpp  common.h
year2016/cpp/day1/: day1.cpp
year2016/cpp/day11/: day11.cpp  day11.h  day11_bfs.cpp  day11_logic.cpp  day11_test.cpp  day11_v2.cpp  day11_v2.h
year2016/cpp/day12/: day12.cpp
year2016/cpp/day13/: day13.cpp
year2016/cpp/day14/: day14.cpp  day14.h  day14_exec.cpp  day14_test.cpp
year2016/cpp/day15/: day15.cpp  test.py
year2016/cpp/day16/: day16.cpp
year2016/cpp/day17/: day17.cpp  day17.h  day17_exec.cpp  day17_test.cpp
year2016/cpp/day18/: day18.cpp
year2016/cpp/day19/: day19.cpp  day19.h  day19_exec.cpp  day19_test.cpp
year2016/cpp/day2/: day2.cpp
year2016/cpp/day20/: day20.cpp
year2016/cpp/day21/: day21.cpp  day21.h  day21_exec.cpp  day21_test.cpp
year2016/cpp/day22/: day22.cpp
year2016/cpp/day23/: day23.cpp
year2016/cpp/day24/: day24.cpp
year2016/cpp/day25/: day25.cpp
year2016/dart/day2/: pubspec.yaml
year2016/dart/day3/: pubspec.yaml
year2016/dart/day4/: pubspec.yaml
year2016/dart/day5/: pubspec.yaml
year2016/dart/day6/: pubspec.yaml
year2016/dart/day7/: pubspec.yaml
year2016/elixir/day1/: day1.exs  mix.exs
year2016/elixir/day8/: day8.exs
year2016/haskell/: Makefile  cabal.project
year2016/haskell/day1/: day1.cabal
year2016/haskell/day1/app/: Main.hs
year2016/haskell/day2/: day2.cabal
year2016/rust/: Cargo.toml  Makefile
year2016/rust/day10/: Cargo.toml
year2016/rust/day9/: Cargo.toml
year2017/rust/: Cargo.toml  Makefile
year2017/rust/day1/: Cargo.toml
year2017/rust/day10/: Cargo.toml
year2017/rust/day11/: Cargo.toml
year2017/rust/day14/: Cargo.toml
year2017/rust/day15/: Cargo.toml
year2017/rust/day16/: Cargo.toml
year2017/rust/day18/: Cargo.toml
year2017/rust/day19/: Cargo.toml
year2017/rust/day2/: Cargo.toml
year2017/rust/day20/: Cargo.toml
year2017/rust/day21/: Cargo.toml
year2017/rust/day22/: Cargo.toml
year2017/rust/day3/: Cargo.toml
year2017/rust/day4/: Cargo.toml
year2017/rust/day5/: Cargo.toml
year2017/rust/day6/: Cargo.toml
year2017/rust/day7/: Cargo.toml
year2017/rust/day8/: Cargo.toml
year2018/: README.md
year2018/rust/: Cargo.toml  Makefile  result.txt
year2018/rust/day1/: Cargo.toml
year2018/rust/day14/: Cargo.toml
year2018/rust/day15/: Cargo.toml
year2018/rust/day18/: Cargo.toml
year2018/rust/day20/: Cargo.toml
year2018/rust/day21/: Cargo.toml
year2018/rust/day23/: Cargo.toml
year2018/rust/day25/: Cargo.toml
year2018/rust/day5/: Cargo.toml
year2018/rust/day9/: Cargo.toml
year2018/rust/src/: main.rs
year2019/: README.md
year2019/c++/: year2019.sln
year2019/c++/day1/: day1.cpp
year2019/c++/day1Tests/: day1Tests.cpp
year2019/c++/day2/: day2.cpp
year2019/c++/day3/: day3.cpp  day3_func.cpp  day3_func.h
year2019/c++/day3Tests/: day3_test.cpp
year2019/cs/: AoC2019.sln  README.md
year2019/cs/Benchmark/: Benchmark.csproj  Day10Benchmark.cs  Day12Benchmark.cs  Day12QuestionBenchmark.cs  Day17Benchmark.cs  Day7Benchmark.cs  Program.cs
year2019/cs/Common/: Common.csproj  DefaultDict.cs  IntCoder.cs  IntCoderDay11.cs  IntCoderDay13.cs
year2019/cs/Day10.Tests/: AsteroidMap.cs  Day10.Tests.csproj  Day10Tests.cs  MonitoringLocation.cs  MonitoringStation.cs
year2019/cs/Day11.Tests/: Day11Tests.cs
year2019/cs/Day12.Tests/: Coordinates.cs  Day12Tests.cs  DirectionPosition.cs  Moon.cs  MoonSimulator.cs  QuestionTests.cs  Velocity.cs
year2019/cs/Day13.Tests/: Day13Tests.cs
year2019/cs/Day2.Tests/: Day2Tests.cs
year2019/cs/Day5.Tests/: Day5.Tests.csproj  Day5Tests.cs
year2019/cs/Day6.Tests/: Day6Tests.cs
year2019/cs/Day7.Tests/: ChannelCoder.cs  CoderAlgorithms.cs  Day7.Tests.csproj  Day7Tests.cs  ReactiveCoder.cs
year2019/cs/Day8.Tests/: Day8Tests.cs
year2019/day1/: day1.py  day1_func.py  test_day1.py
year2019/day2/: day2.py
year2019/day3/: day3.py  day3_func.py  test_day3.py
year2019/day4/: day4.py  day4_func.py  test_day4.py
year2019/day5/: day5.py  day5_func.py  test_day5.py
year2019/go/: Makefile  day1.go  go.mod
year2020/: common.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day17_data.txt  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day6_data.txt  day7.py  day8.py  day9.py
year2021/: AdventOfCode21.sln
year2021/data/: ff.py
year2022/: README.md
year2022/data/: test.txt
year2022/go22/: Makefile  go.mod
year2023/rust/: Cargo.toml  Makefile
year2024/rust/: Cargo.toml  Makefile
year2025/cpp/: CMakeLists.txt  CMakePresets.json  main.cpp
year2025/cpp/common/: common.cpp  common.h
year2025/cpp/day0/: main.cpp  test_aoc.cpp
year2025/cpp/day1/: aoc.cpp  main.cpp  test_aoc.cpp
year2025/cpp/day10/: aoc.cpp  aoc.h  main.cpp  test_aoc.cpp
year2025/cpp/day11/: aoc.cpp  aoc.h  main.cpp  test_aoc.cpp
year2025/cpp/day12/: aoc.cpp  main.cpp  test_aoc.cpp
year2025/cpp/day2/: main.cpp
year2025/cpp/day3/: main.cpp
year2025/cpp/day4/: main.cpp  test_aoc.cpp
year2025/cpp/day5/: aoc.cpp  aoc.h  main.cpp  test_aoc.cpp
year2025/cpp/day6/: aoc.cpp  aoc.h  main.cpp  test_aoc.cpp
year2025/cpp/day7/: aoc.cpp  aoc.h  main.cpp  test_aoc.cpp
year2025/cpp/day8/: aoc.cpp  aoc.h  main.cpp  test_aoc.cpp
year2025/cpp/day9/: aoc.cpp  main.cpp  test_aoc.cpp
year2025/data/: day7_data_test.txt
year2025/rust/: Cargo.toml  Makefile
(+487 files in other folders)
